--- a/pom.xml
+++ b/pom.xml
@@ -11,4 +11,11 @@
     <module>Experimento1Arquisoft-ejb</module>
     <module>ExperimentoArquisoft</module>
   </modules>
+  <dependencies>
+    <dependency>
+        <groupId>org.springframework.social</groupId>
+        <artifactId>spring-social-facebook</artifactId>
+        <version>1.1.0.RELEASE</version>
+    </dependency>
+</dependencies>
 </project>
