Added IceFaces Compat

--- a/Experimento1Arquisoft-web/pom.xml
+++ b/Experimento1Arquisoft-web/pom.xml
@@ -41,6 +41,11 @@
             <version>1.1.1.RELEASE</version>
         </dependency>
         <dependency>
+            <groupId>org.icefaces</groupId>
+            <artifactId>icefaces-compat</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>6.0</version>
