--- a/Experimento1Arquisoft-ejb/pom.xml
+++ b/Experimento1Arquisoft-ejb/pom.xml
@@ -26,6 +26,11 @@
             <version>1.1.1.RELEASE</version>
         </dependency>
         <dependency>
+            <groupId>org.facebook4j</groupId>
+            <artifactId>facebook4j-core</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
             <version>6.0</version>
