--- a/Experimento1Arquisoft-web/pom.xml
+++ b/Experimento1Arquisoft-web/pom.xml
@@ -40,6 +40,12 @@
             <artifactId>spring-social-facebook</artifactId>
             <version>1.1.1.RELEASE</version>
         </dependency>
+        
+        <dependency>
+            <groupId>org.icefaces</groupId>
+            <artifactId>icefaces-compat</artifactId>
+            <version>3.1.0</version>
+        </dependency>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
